--- a/src/style.scss
+++ b/src/style.scss
@@ -3,3 +3,14 @@
 .panel-title a {
   display: block;
 }
+
+ul {
+  padding: 0;
+  li {
+    list-style: none;
+  }
+}
+
+a:focus {
+  outline: none;
+}
